style.css
/* Adding float to highscore and timer   */

.left {
    float:left
}

.right {
    float:right;
}

.hide {
    display: none;
}

/* Adding font family and size to page body  */
body {
    font-family:Arial, Helvetica, sans-serif;
    font-size: 120%;
}

/* Adding display block to div's */

div {
    display: block;
}

/* Set display and margin on main page paragraph */

p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

/* Set questions to bold font  */

#question {
    font-weight: bold;
}


/* Aligning and positioning start, questions, end screen sections and highscores page */
.start {
    text-align: center;
    position:absolute;
    left: 20%;
    top: 20%;
    margin-top: -10%;
    margin-left: 5%;
    width: 50%;
    height: 40%;
}

#questions {
    text-align: left;
    position:absolute;
    left: 1%;
    top: -5%;
    margin-top: 19%;
    margin-left: 30%;
    width: 50%;
    height: 10%;
}

#end-screen {
    text-align: left;
    position:absolute;
    left: 20%;
    top: 20%;
    margin-top: -10%;
    margin-left: 5%;
    width: 50%;
    height: 40%;

}

.Highscore {
    font-family:Arial, Helvetica, sans-serif;
    font-size: 80%;
    text-align: center;
    position:absolute;
    left: 20%;
    top: 20%;
    margin-top: -10%;
    margin-left: 5%;
    width: 50%;
    height: 40%;
}
/* Applying background color + border to start, answer, submit, GoBack and ClearHighscore buttons */
#start { 
    background-color: #3d0066; 
    color: white;
    border: 2px solid #3d0066;
    border-radius: 5px;
}

#Submit {
    background-color: #3d0066;
    color: white;
    border: 2px solid #3d0066;
    border-radius: 5px;
}

.btn {
    background-color: #3d0066;
    color: white;
    border: 2px solid #3d0066;
    border-radius: 5px;
    position:relative;
    left:-15%;
}

#Goback {
    background-color: #3d0066; 
    color: white;
    border: 2px solid #3d0066;
    border-radius: 5px;
}

#Clear {
    background-color: #3d0066; 
    color: white;
    border: 2px solid #3d0066;
    border-radius: 5px;
}

#scoreElement{
    background-color: #fae6ff; 
    color: black;
    text-align: left;
    position:relative;
    left:28%; 
}

  
/* applying hover selector to start, answer, submit, GoBack and ClearHighscore buttons */
.btn:hover {
    background: color #e6e6e6;
    opacity: 0.7;
}
#Submit:hover {
    background: color #e6e6e6;
    opacity: 0.7;
}
#start:hover {
    background: color #e6e6e6;
    opacity: 0.7;
}
#Clear:hover {
    background: color #e6e6e6;
    opacity: 0.7;
} 
#Goback:hover {
    background: color #e6e6e6;
    opacity: 0.7;
}
    

